Reorganise the inspection display name properties.

--- a/src/main/resources/messages/XQueryBundle.properties
+++ b/src/main/resources/messages/XQueryBundle.properties
@@ -4,31 +4,31 @@ annotator.string-literal.unknown-xml-entity=XPST0003: Predefined entity ''{0}'' 
 find-usages.identifier=Identifier
 fnerror.FORG0001.lexical-representation=The value does not match the lexical representation for ''{0}''.
 fnerror.XPTY0004.incompatible-types=Incompatible types when casting ''{0}'' to ''{1}''.
-inspection.ijvs.group-name=Vendor-specific behaviour
-inspection.xpst.group-name=XPath static errors
-inspection.xqst.group-name=XQuery static errors
-inspection.XPST0003.final-statement-semicolon.display-name=Scripting final semicolon
+inspection.ijvs.group-name=IJVS: Vendor-specific behaviour
+inspection.ijvs.IJVS0001=IJVS0001: Unsupported XQuery construct
+inspection.ijvs.IJVS0002=IJVS0002: Reserved function name
+inspection.ijvs.IJVS0003=IJVS0003: HTML4 and HTML5 predefined entities
+inspection.ijvs.IJVS0004=IJVS0004: Saxon map constructor entry syntax
+inspection.ijvs.IJVS0005=IJVS0005: Scripting final semicolon
+inspection.xpst.group-name=XPST: XPath static errors
+inspection.xpst.XPST0017=XPST0017: Undefined function
+inspection.xpst.XPST0081=XPST0081: Unbound namespace prefix
+inspection.xqst.group-name=XQST: XQuery static errors
+inspection.xqst.XQST0031=XQST0031: Unsupported XQuery version
+inspection.xqst.XQST0033=XQST0033: Duplicate namespace prefix
+inspection.xqst.XQST0047=XQST0047: Duplicate namespace uri
+inspection.xqst.XQST0118=XQST0118: Mismatched XML element tags
 inspection.XPST0003.final-statement-semicolon.required=XPST0003: {0} requires '';'' at the end of each statement.
-inspection.XPST0003.map-constructor-entry.display-name=Saxon map constructor entry syntax
 inspection.XPST0003.map-constructor-entry.message=XPST0003: Expected ':' (XQuery 3.1/MarkLogic) or ':=' (Saxon 9.4-9.6).
-inspection.XPST0003.predefined-entity.display-name=Predefined entities
-inspection.XPST0003.reserved-function-name.display-name=Reserved function name
 inspection.XPST0003.reserved-function-name.message=XPST0003: Reserved {0} keyword used as a function name.
-inspection.XPST0003.unsupported-construct.display-name=Unsupported XQuery construct
 inspection.XPST0003.unsupported-construct.message=XPST0003: {0} does not support {1} constructs.
-inspection.XPST0017.undefined-function.display-name=Undefined function
 inspection.XPST0017.undefined-function.unresolved-qname=XPST0017: Cannot locate the function name.
 inspection.XPST0017.undefined-function.unresolved-arity=XPST0017: The number of arguments do not match a function.
-inspection.XPST0081.unbound-qname-prefix.display-name=Unbound namespace prefix
 inspection.XPST0081.unbound-qname-prefix.message=XPST0081: Cannot resolve namespace prefix.
 inspection.XQST0031.unsupported-version.different-version-for-transaction=XQST0031: MarkLogic requires that XQuery versions are the same across different transactions.
-inspection.XQST0031.unsupported-version.display-name=Unsupported XQuery version
 inspection.XQST0031.unsupported-version.message=XQST0031: The implementation does not support this XQuery version.
-inspection.XQST0033.duplicate-namespace-prefix.display-name=Duplicate namespace prefix
 inspection.XQST0033.duplicate-namespace-prefix.message=XQST0033: The namespace prefix ''{0}'' has already been defined.
-inspection.XQST0047.duplicate-namespace-uri.display-name=Duplicate namespace uri
 inspection.XQST0047.duplicate-namespace-uri.message=XQST0047: The namespace uri ''{0}'' has already been defined.
-inspection.XQST0118.mismatched-dir-elem-tag-name.display-name=Mismatched XML element tags
 inspection.XQST0118.mismatched-dir-elem-tag-name.message=XQST0118: The closing tag ''{0}'' does not match the open tag ''{1}''.
 parser.error.as-not-supported-in-test=XPST0003: Return type specifiers not supported in ''{0}''.
 parser.error.cdata-section-not-in-element-content=XPST0003: CDATA sections must be placed within element tags.
