--- a/build.gradle
+++ b/build.gradle
@@ -1,19 +1,39 @@
 buildscript {
     ext.since_from_version = { version ->
-        def since = version =~ /([A-Z]+-)?20([0-9][0-9])\.([1-3])(\.[0-9]+)?/ // e.g. IC-2017.3, 2017.2.4
+        // (1) Year and Version -- IC-2017.3 => 173, 2017.2.4 => 172
+
+        def since = version =~ /([A-Z]+-)?20([0-9][0-9])\.([1-3])(\.[0-9]+)?/
         if (since.matches()) {
             return "${since.group(2)}${since.group(3)}"
         }
+
+        // (2) Build ID -- IU-163.7890 => 163, 171.1234 => 171
+
         since = version =~ /([A-Z]+-)?([0-9][0-9][0-9])\.[0-9]+?/ // e.g. IU-163.7890, 171.1234
         if (since.matches()) {
             return since.group(2)
         }
-        if (version == "LATEST-EAP-SNAPSHOT") return "182"
-        return "182" // version == "LATEST-TRUNK-SNAPSHOT"
+
+        // (3) Named Snapshots -- LATEST-EAP-SNAPSHOT, LATEST-TRUNK-SNAPSHOT
+
+        def buildDir = new File("build")
+        if (!buildDir.exists()) {
+            buildDir.mkdir()
+        }
+
+        def repositoryPath = "https://www.jetbrains.com/intellij-repository/snapshots/com/jetbrains/intellij/idea/BUILD/"
+        def build = new File("build/BUILD-${version}.txt")
+        if (!build.exists()) {
+            new URL("$repositoryPath/$version/BUILD-${version}.txt").withInputStream { input ->
+                build.withOutputStream { output -> (output << input).close() }
+            }
+        }
+
+        return build.readLines()[0].split('\\.')[0]
     }
 
-    ext.idea_version = System.getenv("IDEA_VERSION") ?: 'IC-2017.3'
-    ext.idea_since_build = System.getenv("IDEA_SINCE_BUILD") ?: ext.since_from_version(ext.idea_version)
+    ext.idea_version = System.getenv("IDEA_VERSION") ?: 'LATEST-EAP-SNAPSHOT'
+    ext.idea_since_build = ext.since_from_version(ext.idea_version)
     ext.junit_milestone = ''
     ext.kotlin_version = '1.1.4-2'
 
