--- a/.travis.yml
+++ b/.travis.yml
@@ -10,6 +10,16 @@ env:
   - IDEA_VERSION=IC-2017.3 # Previous
   - IDEA_VERSION=IC-2017.2 # Old
 
+install: true
+
+script:
+  # Generate a gradle wrapper using a null gradle file so gradle < 4.6 does not fail parsing 'useJUnitPlatform()'.
+  - touch null.gradle ; gradle -b null.gradle wrapper --gradle-version 4.7 ; rm null.gradle
+  - ./gradlew --version
+  # Use the gradle wrapper to build and test the project.
+  - ./gradlew assemble
+  - ./gradlew test
+
 # Code Coverage
 after_success:
   - bash <(curl -s https://codecov.io/bash)
