--- a/build.gradle
+++ b/build.gradle
@@ -35,13 +35,13 @@ buildscript {
     ext.idea_version = System.getenv("IDEA_VERSION") ?: 'LATEST-EAP-SNAPSHOT'
     ext.idea_since_build = ext.since_from_version(ext.idea_version)
     ext.junit_milestone = ''
-    ext.kotlin_version = '1.1.4-2'
+    ext.kotlin_version = '1.2.60'
 
     repositories {
         maven { url 'http://dl.bintray.com/jetbrains/intellij-plugin-service' }
-        maven { url 'https://dl.bintray.com/kotlin/kotlin-eap-1.1' }
         mavenCentral()
     }
+
     dependencies {
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
     }
