--- a/build.gradle
+++ b/build.gradle
@@ -60,7 +60,7 @@ allprojects {
     apply plugin: 'jacoco'
 
     group 'uk.co.reecedunn.intellij.plugin.xquery'
-    version '1.2-dev'
+    version '1.2'
 
     repositories {
         mavenCentral()
