Update the version to 1.3-dev.

--- a/build.gradle
+++ b/build.gradle
@@ -60,7 +60,7 @@ allprojects {
     apply plugin: 'jacoco'
 
     group 'uk.co.reecedunn.intellij.plugin.xquery'
-    version '1.2'
+    version '1.3-dev'
 
     repositories {
         mavenCentral()
