--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -14,6 +14,10 @@
 
   <change-notes><![CDATA[
     <h3>Release 1.3-dev:</h3>
+    <p>Language Support:</p>
+    <ol>
+      <li>Recognise Saxon <code>UnionType</code> constructs in <code>TypedMapTest</code> sequence types.</li>
+    </ol>
   ]]></change-notes>
 
   <idea-version since-build="161"/>
