--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -17,6 +17,17 @@
     <p>Language Support:</p>
     <ol>
       <li>Recognise Saxon <code>UnionType</code> constructs in <code>TypedMapTest</code> sequence types.</li>
+      <li>Support <code>TupleType</code> constructs with names only, not associated sequence types.</li>
+    </ol>
+    <p>References and Resolving:</p>
+    <ol>
+      <li>
+        Expand <code>NCName</code>-based <code>EQName</code> nodes, using the default element or function
+        namespaces where appropriate.
+      </li>
+      <li>Locate built-in definitions from <code>http://</code>-based <code>URILiteral</code> nodes.</li>
+      <li>Resolve <code>ModuleImport</code> declarations that don't specify <code>at</code> paths.</li>
+      <li>Resolve <code>NamespaceDecl</code> declarations.</li>
     </ol>
   ]]></change-notes>
 
