--- a/build.gradle
+++ b/build.gradle
@@ -29,13 +29,21 @@ buildscript {
         return build.readLines()[0].split('\\.')[0]
     }
 
+    ext.kotlin_from_version = { version ->
+        if (version == "LATEST-EAP-SNAPSHOT" || version == "LATEST-TRUNK-SNAPSHOT")
+            "1.3-M2" // >= 2018.3
+        else
+            "1.2.70" // <= 2018.2
+    }
+
     ext.idea_version = System.getenv("IDEA_VERSION") ?: 'LATEST-EAP-SNAPSHOT'
     ext.idea_since_build = ext.since_from_version(ext.idea_version)
     ext.junit_milestone = ''
-    ext.kotlin_version = '1.2.60'
+    ext.kotlin_version = ext.kotlin_from_version(ext.idea_version)
 
     repositories {
         maven { url 'http://dl.bintray.com/jetbrains/intellij-plugin-service' }
+        maven { url 'https://dl.bintray.com/kotlin/kotlin-eap' }
         mavenCentral()
     }
 
@@ -99,7 +107,7 @@ jacocoTestReport {
 check.dependsOn jacocoTestReport
 
 repositories {
-    maven { url 'https://dl.bintray.com/kotlin/kotlin-eap-1.1' }
+    maven { url 'https://dl.bintray.com/kotlin/kotlin-eap' }
     mavenCentral()
 }
 
