Map.getOrDefault has an item type of T!, not T?, for IntelliJ <= 2018.1.

--- a/.travis.yml
+++ b/.travis.yml
@@ -6,9 +6,8 @@ jdk:
 env:
   - IDEA_VERSION=LATEST-TRUNK-SNAPSHOT
   - IDEA_VERSION=LATEST-EAP-SNAPSHOT
-  - IDEA_VERSION=IC-2018.1 # Stable
-  - IDEA_VERSION=IC-2017.3 # Previous
-  - IDEA_VERSION=IC-2017.2 # Old
+  - IDEA_VERSION=IC-2018.2 # Current
+  - IDEA_VERSION=IC-2018.1 # Previous
 
 install: true
 
