--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -30,6 +30,7 @@
       <li>Resolve <code>ModuleImport</code> declarations that don't specify <code>at</code> paths.</li>
       <li>Resolve <code>NamespaceDecl</code> declarations.</li>
       <li>Resolve <code>DefaultNamespaceDecl</code> declarations.</li>
+      <li>Resolve <code>DirAttributeList</code> attributes.</li>
     </ol>
   ]]></change-notes>
 
