--- a/build.gradle
+++ b/build.gradle
@@ -36,7 +36,7 @@ buildscript {
             "1.2.70" // <= 2018.2
     }
 
-    ext.idea_version = System.getenv("IDEA_VERSION") ?: 'LATEST-EAP-SNAPSHOT'
+    ext.idea_version = System.getenv("IDEA_VERSION") ?: '2018.2'
     ext.idea_since_build = ext.since_from_version(ext.idea_version)
     ext.junit_milestone = ''
     ext.kotlin_version = ext.kotlin_from_version(ext.idea_version)
