--- a/.gitattributes
+++ b/.gitattributes
@@ -21,6 +21,8 @@ src/test/resources/tests/parser/saxon-9.8/*.txt text eol=lf
 src/test/resources/tests/parser/saxon-9.8/*.xq text eol=lf
 src/test/resources/tests/parser/xquery-1.0/*.txt text eol=lf
 src/test/resources/tests/parser/xquery-1.0/*.xq text eol=lf
+src/test/resources/tests/parser/xquery-1.0-20030502/*.txt text eol=lf
+src/test/resources/tests/parser/xquery-1.0-20030502/*.xq text eol=lf
 src/test/resources/tests/parser/xquery-3.0/*.txt text eol=lf
 src/test/resources/tests/parser/xquery-3.0/*.xq text eol=lf
 src/test/resources/tests/parser/xquery-3.1/*.txt text eol=lf
