--- a/src/main/resources/messages/XQueryBundle.properties
+++ b/src/main/resources/messages/XQueryBundle.properties
@@ -22,6 +22,7 @@ inspection.XPST0003.final-statement-semicolon.required=XPST0003: {0} requires ''
 inspection.XPST0003.map-constructor-entry.message=XPST0003: Expected ':' (XQuery 3.1/MarkLogic) or ':=' (Saxon 9.4-9.6).
 inspection.XPST0003.reserved-function-name.message=XPST0003: Reserved {0} keyword used as a function name.
 inspection.XPST0003.unsupported-construct.message=XPST0003: {0} does not support {1} constructs.
+inspection.XPST0003.unsupported-construct-version.message=XPST0003: XQuery version string ''{0}'' does not support {1} constructs.
 inspection.XPST0017.undefined-function.unresolved-qname=XPST0017: Cannot locate the function name.
 inspection.XPST0017.undefined-function.unresolved-arity=XPST0017: The number of arguments do not match a function.
 inspection.XPST0081.unbound-qname-prefix.message=XPST0081: Cannot resolve namespace prefix.
