Recover parsing when the CompElemConstructor tag name is a StringLiteral.

--- a/src/main/resources/messages/XQueryBundle.properties
+++ b/src/main/resources/messages/XQueryBundle.properties
@@ -59,6 +59,7 @@ parser.error.expected-pragma-contents=XPST0003: Pragma contents expected.
 parser.error.expected-prolog-body=XPST0003: Prolog header statements must be placed before 'variable', 'function' and 'option' statements.
 parser.error.expected-property-value-string=XPST0003: Missing property value string.
 parser.error.expected-qname=XPST0003: Missing qualified name.
+parser.error.expected-qname-or-braced-expression=XPST0003: String literal should be wrapped in braces, or be a qualified name.
 parser.error.expected-query-body=XPST0003: Missing query body.
 parser.error.expected-query-statement=XPST0003: Empty query statement before ''{0}''.
 parser.error.expected-uri-string=XPST0003: Missing URI string.
