--- a/src/main/resources/messages/XQueryBundle.properties
+++ b/src/main/resources/messages/XQueryBundle.properties
@@ -47,6 +47,7 @@ parser.error.expected-eof=XPST0003: Expected end of file.
 parser.error.expected-eqname=XPST0003: Missing qualified name or braced URI qualified name.
 parser.error.expected-eqname-or-token=XPST0003: Missing qualified name, braced URI qualified name or ''{0}''.
 parser.error.expected-expression=XPST0003: Missing expression.
+parser.error.expected-identifier-or-braced-expression=XPST0003: String literal should be wrapped in braces, or be an identifier.
 parser.error.expected-keyword=XPST0003: Expected keyword: {0}.
 parser.error.expected-keyword-or-token=XPST0003: Expected ''{0}'', or keyword: {1}.
 parser.error.expected-map-entry-assign=XPST0003: Expected ':' (XQuery 3.1/MarkLogic) or ':=' (Saxon 9.4-9.6).
