--- a/.gitattributes
+++ b/.gitattributes
@@ -19,6 +19,8 @@ src/test/resources/tests/parser/saxon-9.4/*.txt text eol=lf
 src/test/resources/tests/parser/saxon-9.4/*.xq text eol=lf
 src/test/resources/tests/parser/saxon-9.8/*.txt text eol=lf
 src/test/resources/tests/parser/saxon-9.8/*.xq text eol=lf
+src/test/resources/tests/parser/saxon-9.9/*.txt text eol=lf
+src/test/resources/tests/parser/saxon-9.9/*.xq text eol=lf
 src/test/resources/tests/parser/xquery-1.0/*.txt text eol=lf
 src/test/resources/tests/parser/xquery-1.0/*.xq text eol=lf
 src/test/resources/tests/parser/xquery-1.0-20030502/*.txt text eol=lf
