--- a/src/main/resources/messages/XQueryBundle.properties
+++ b/src/main/resources/messages/XQueryBundle.properties
@@ -96,6 +96,7 @@ parser.error.qname.whitespace-after-local-part=XPST0003: Whitespace is not allow
 parser.error.qname.whitespace-before-local-part=XPST0003: Whitespace is not allowed before ':' in a qualified name.
 parser.error.qname.wildcard-local-name=XPST0003: Wildcard local name after ':' in qualified name.
 parser.error.return-without-flwor=XPST0003: 'return' keyword in non-FLWOR expression.
+parser.error.tuple-wildcard-with-names-after=XPST0003: Tuples cannot have named fields after extensible marker '*'.
 parser.error.unexpected-closing-tag=XPST0003: Closing XML tag without corresponding opening tag.
 parser.error.unexpected-token=XPST0003: Unexpected token.
 parser.error.unexpected-whitespace=XPST0003: Whitespace is not allowed here.
