--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -14,18 +14,22 @@
 
   <change-notes><![CDATA[
     <h3>Release 1.3-dev:</h3>
-    <p>Language Support:</p>
+    <p>Saxon Vendor Extensions:</p>
     <ol>
       <li>Recognise Saxon <code>UnionType</code> constructs in <code>TypedMapTest</code> sequence types.</li>
       <li>Support <code>TupleType</code> constructs with names only, not associated sequence types.</li>
       <li>Support Saxon 9.8 simple inline function expressions.</li>
       <li>Support Saxon 9.9 <code>orElse</code> and <code>andAlso</code> logical expressions.</li>
       <li>Support Saxon 9.9 optional field names for tuples, and extensible tuples.</li>
-      <li>Recover parsing when the <code>CompElemConstructor</code>, <code>CompAttrConstructor</code>, <code>CompPIConstructor</code>, or <code>CompNamespaceConstructor</code> tag name is a <code>StringLiteral</code>.</li>
     </ol>
     <p>XQuery Working Draft 02 May 2003 and MarkLogic 0.9-ml Support:</p>
     <ol>
       <li>Support <code>empty()</code> syntax for <code>empty-sequence()</code>.</li>
+    </ol>
+    <p>Invalid Syntax Recovery:</p>
+    <ol>
+      <li>Recover parsing when the <code>CompElemConstructor</code>, <code>CompAttrConstructor</code>, <code>CompPIConstructor</code>, or <code>CompNamespaceConstructor</code> tag name is a <code>StringLiteral</code>.</li>
+      <li>Recover parsing when a <code>SequenceType</code> is used in a <code>ParenthesizedItemType</code>.</li>
     </ol>
     <p>Module Import Resolution:</p>
     <ol>
