--- a/src/main/resources/messages/XQueryBundle.properties
+++ b/src/main/resources/messages/XQueryBundle.properties
@@ -54,6 +54,7 @@ parser.error.expected-map-entry-assign=XPST0003: Expected ':' (XQuery 3.1/MarkLo
 parser.error.expected-module-type=XPST0003: Missing library 'module' declaration or main module query body.
 parser.error.expected-ncname=XPST0003: Missing identifier.
 parser.error.expected-ncname-not-qname=XPST0003: Expected an identifier not a qualified name.
+parser.error.expected-not=XPST0003: Expected ''{0}'', not ''{1}''.
 parser.error.expected-option-string=XPST0003: Missing option value string.
 parser.error.expected-pi-contents=XPST0003: Processing instruction contents expected.
 parser.error.expected-pragma-contents=XPST0003: Pragma contents expected.
